<resources>
    <string name="app_name">Farm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">search</string>
    <string name="animal_deleted">Animal has been successfully deleted</string>
    <string name="animal_edited">Animal has been successfully edited</string>
    <string name="empty_not_saved">Animal not saved because there are empty fields</string>
    <string name="animal_added">Animal has been successfully saved</string>
    <string name="hint_animal_name">Name of animal</string>
    <string name="hint_animal_gender">Animal gender</string>
    <string name="button_save">Save</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="weather">Weather</string>
    <string name="change">ChangeView</string>
    <string name="hint_field_name">Name of field</string>
    <string name="hint_field_surface">Surface of field</string>
    <string name="field_added">Animal has been succesfully added</string>
    <string name="field_edited">Field has been succesfully edited</string>
    <string name="field_deleted">Field has been sucessfully deleted</string>
    <string name="geo">geo</string>
</resources>