<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/menu_item_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_weather"
        android:title="@string/weather"
        android:icon="@drawable/ic_action_weather"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_geo"
        android:title="@string/geo"
        android:icon="@drawable/ic_action_weather"

        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_change"
        android:title="@string/change"
        android:icon="@drawable/ic_action_field"

        app:showAsAction="ifRoom" />
</menu>