<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edit_animal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_animal_name"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        tools:ignore="Suspicious0dp" />

    <EditText
        android:id="@+id/edit_animal_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_animal_gender"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        tools:ignore="Suspicious0dp" />

    <EditText
        android:id="@+id/edit_animal_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="Animal index"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editPhoto"
        android:layout_margin="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="72dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnImgPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make photo" />

        <ImageView
            android:id="@+id/imgPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@color/button_color"
        android:text="@string/button_save" />


</LinearLayout>